translations_exported/zh/docs_exported/1.18/crafttweaker/docs/vanilla/api/recipe/MirrorAxis.md
# MirrorAxis

Defines how a recipe should be mirrored.

## 导入类

It might be required for you to import the package if you encounter any issues (like casting an Array), so better be safe than sorry and add the import at the very top of the file.
```zenscript
import crafttweaker.api.recipe.MirrorAxis;
```


## Enum Constants

MirrorAxis is an enum. It has 5 enum constants. They are accessible using the code below.

```zenscript

// Mirror the recipe on all axes.
MirrorAxis.ALL

// Mirror the recipe diagonally.
MirrorAxis.DIAGONAL

// Mirror the recipe horizontally.
MirrorAxis.HORIZONTAL

// Do not mirror the recipe.
MirrorAxis.NONE

// Mirror the recipe vertically.
MirrorAxis.VERTICAL
```
## Static Properties

| 名称         | 类型                                           | 可获得  | 可设置   | 描述                              |
| ---------- | -------------------------------------------- | ---- | ----- | ------------------------------- |
| ALL        | [MirrorAxis](/vanilla/api/recipe/MirrorAxis) | true | false | Mirror the recipe on all axes.  |
| DIAGONAL   | [MirrorAxis](/vanilla/api/recipe/MirrorAxis) | true | false | Mirror the recipe diagonally.   |
| HORIZONTAL | [MirrorAxis](/vanilla/api/recipe/MirrorAxis) | true | false | Mirror the recipe horizontally. |
| NONE       | [MirrorAxis](/vanilla/api/recipe/MirrorAxis) | true | false | Do not mirror the recipe.       |
| VERTICAL   | [MirrorAxis](/vanilla/api/recipe/MirrorAxis) | true | false | Mirror the recipe vertically.   |

